# rust-worker

./: .gitignore  Cargo.toml  docker-compose.yml
src/: dispatch.rs  dispatcher.rs  encode.rs  lib.rs  main.rs  worker.rs
