[package]
name = "taskworker"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-rt = "2.2"
amiquip = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.21"
